--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,13 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
+
+html,
+body {
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;     /* IE / Edge */
+}
+body::-webkit-scrollbar {
+  display: none;                /* Chrome, Safari, Opera */
+}
+
