--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,14 @@ button {
 .scrollbar-hide {
     scrollbar-width: none;
 }
+
+
+
+html,
+body {
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;     /* IE / Edge */
+}
+body::-webkit-scrollbar {
+  display: none;                /* Chrome, Safari, Opera */
+}
